fixed Nav img offcenter issue

--- a/main.css
+++ b/main.css
@@ -182,9 +182,9 @@ h2 {
     height: 24vh;
 /*    width: auto;*/
     min-height: 100%;
-    min-width: 100vw;
-    max-height: 100vh;
-    max-width: 100vw;
+    min-width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 /*
     margin-left: auto;
     margin-right: auto;
